--- a/index.css
+++ b/index.css
@@ -1,5 +1,10 @@
+/* name:张寅哲 group:17 Homework_1 */
+
 body {
-	background-color: rgb(230,230,230);
+	background-image: 
+		url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1505278187563&di=75e83d5e66841effc2913810811bff97&imgtype=0&src=http%3A%2F%2Fwww.win-winfood.com%2Fwp-content%2Fuploads%2F2015%2F01%2FDSC_0283v1.jpg");
+	background-size: 100% 100%;
+	background-attachment: fixed;
 }
 
 h1 {
@@ -9,8 +14,26 @@ h1 {
 }
 
 a {
-	text-align: center;
+	position: fixed;
+	bottom: 70px;
+	right: 90px;
 	font-size: 2em;
 	font-family: Georgia, Garamond, serif;
+	letter-spacing: 0.2em;
+}
+
+a:link {
 	color: #A4A400;
+}
+
+a:visited {
+	color: #A4A400;
+}
+
+a:hover {
+	color: orange;
+}
+
+a:active {
+	color: orange;
 }
